# micropt

./: CMakeLists.txt  LICENSE  README.md
include/: bvh.hpp  camera.hpp  classical_object.hpp  curve.hpp  group.hpp  hit.hpp  image.hpp  light.hpp  material.hpp  mesh.hpp  object3d.hpp  ray.hpp  render.hpp  scene_parser.hpp  sppm.hpp  texture.hpp  tiny_obj_loader.h  transform.hpp  triangle.hpp  utils.hpp
src/: curve.cpp  image.cpp  main.cpp  material.cpp  mesh.cpp  render.cpp  scene_parser.cpp  sppm.cpp  utils.cpp
testcases/: bleed.txt  box.txt  breakfast.txt  bunny_gi.txt  erato.txt  fireplace.txt  pt.txt  scene02_cube.txt  scene04_axes.txt  scene05_bunny_200.txt  scene06_bunny_1k.txt  sibenik.txt  sppm.txt
